tests/commands/snapshots/integration_test__commands__test_check_file_pair__empty_directory_no_error_no_output.snap
---
source: tests/commands/test_check_file_pair.rs
expression: "normalize_console_output(stdout, hmap!\n{ to_str!(temp_dir.path()) => \"<temp_dir>\" })"
---
[INFO] Everything is fine, no missing files.
