tests/commands/snapshots/integration_test__commands__test_check_file_pair__forward_matching.snap
---
source: tests/commands/test_check_file_pair.rs
expression: "normalize_console_output(stdout, hmap!\n{ to_str!(temp_dir.path()) => \"<temp_dir>\" })"
---
[WARN] Pair of file <temp_dir>/src/__init__.py does not exist: <temp_dir>/tests/test___init__.py
[WARN] Pair of file <temp_dir>/src/main.py does not exist: <temp_dir>/tests/test_main.py
[WARN] Pair of file <temp_dir>/src/utils/logger.py does not exist: <temp_dir>/tests/utils/test_logger.py
[WARN] Pair of file <temp_dir>/src/utils/slack/template.py does not exist: <temp_dir>/tests/utils/slack/test_template.py
